components/SearchPage/SongChartDetails.module.scss
@import "styles/colors";
@import "styles/components";

.SongChartDetails {
  font-family: "M PLUS 1", "Arial", sans-serif;

  .header {
    margin-bottom: 0.5rem;
    height: 1.25rem;

    display: flex;
    justify-content: center;
    align-items: center;
    gap: 0.25rem;
    font-size: 0.75rem;
    font-weight: bold;

    &.song {
      background-color: $h-x-light;

      span {
        // The 'g' hangs a bit low...
        align-self: flex-start;
      }
    }

    &.chart {
      background-color: $ex-x-light;
    }
  }

  .omniNote {
    margin-top: -0.25rem;
    text-align: center;
    font-size: 0.75rem;
  }

  .actions {
    margin: 0.25rem 19px;
    display: flex;
    font-size: 0.875rem;

    &.spacebetween {
      justify-content: space-between;
    }

    &.center {
      justify-content: center;
    }
  }

  a.viewChartLink {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    gap: 0.1875rem;

    .NoteIcon {
      font-size: 1rem;
    }
  }

  .folder {
    display: flex;
    justify-content: center;
  }

  .banner {
    display: block;
    margin: 0 auto;
    border-radius: 4px;
  }

  .chartLevelPillContainer {
    text-align: center;

    .holdsPill {
      margin-left: 0.25rem;

      @include pill;
      border-color: #2c8dd4;
      background-color: #dd2200;
      color: white;
      padding: 0 0.375rem;
    }
  }

  .Detail {
    margin-top: 0.375rem;
    font-size: 0.875rem;

    &.minor {
      margin-top: 0;
      font-size: 0.75rem;
      line-height: 1;
    }

    .field {
      margin-left: 0.25rem;
      display: inline-block;
      width: 25%;
      font-size: 0.75rem;
      font-weight: bold;
      text-align: right;
      vertical-align: top;
      padding-top: 0.125rem;
    }

    .value {
      margin-left: 0.5rem;
      display: inline-flex;
      column-gap: 0.25rem;
      align-items: flex-start;
      max-width: 72%;
    }

    &.chara {
      margin-bottom: -0.25rem;

      .field {
        padding-top: 0.375rem;
      }

      .value span {
        padding-top: 0.25rem;
      }
    }

    &.charts .value {
      flex-direction: column;
      gap: 0.5rem;

      .chart {
        display: flex;
        gap: 0.5rem;
      }
    }

    &.timing {
      .nonstandard, .variable {
        background-color: $h-light;
      }
    }

    &.links .value {
      display: inline-block;
    }
  }

  .levels {
    display: flex;
    justify-content: center;
  }
}

